# Backtester

./: .gitattributes  .gitignore  CMakeLists.txt  NVDA.csv  README.md
build_py/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
include/API/: helper.hpp
include/backtesting/: backtesting.hpp  excecution.hpp  signaller.hpp  strategies.hpp
include/core/: portfolio.hpp  types.hpp
include/data/: bar.hpp  config.hpp  csv_reader.hpp  market_state.hpp
include/events/: dispatcher.hpp  events.hpp  ring_buffer.hpp
include/pipeline/: excecution_handler.hpp  portfolio_handler.hpp  report_handler.hpp  risk_handler.hpp  signaler_handler.hpp  stop_manager.hpp  strategy_handler.hpp  trace_handler.hpp
include/risklayers/: fixed_fractional.hpp  fixed_fractional_simple.hpp  volatility_scale.hpp  volatility_scale2.hpp
include/signallers/: BuyNHold.hpp  SmoothEMA.hpp
include/strategies/: BuyNHold.hpp  EMA.hpp  SMA.hpp  SmoothEMA.hpp
include/strats/: trendFollower.hpp
include/utility/: scaler.hpp
python/: Generator.py  backtest_plotter.py  test.py
samples/: AAPL.csv  BTCREC3.csv  BitcoinRecent.csv  aapl_raw_data.csv  aaplrecent.csv  tesla.csv
src/: CMakeLists.txt  main.cpp
src/alpaca/: helper.cpp
src/backtesting/: backtester.cpp  excecution.cpp
src/benchmarking/: benchmark.cpp
src/binding/: binding.cpp
src/data/: csv_reader.cpp
